--- a/web_app.html
+++ b/web_app.html
@@ -1647,7 +1647,7 @@
                                         <span style="color:#94a3b8;">👆 Всего тапов:</span>
                                         <span data-stat="total_taps" style="font-weight:700;color:#fff;">${Math.floor(userData.total_taps || 0)}</span>
                                     </div>
-                                    ${userData.active_multiplier > 1 ? `
+                                    ${userData.active_multiplier >= 1 ? `
                                     <div style="display:flex;justify-content:space-between;padding:10px;border-bottom:1px solid rgba(255,255,255,0.1);">
                                         <span style="color:#94a3b8;">⚡ Усилитель тапа:</span>
                                         <span style="font-weight:700;color:#fbbf24;">+${userData.active_multiplier - 1} тапов</span>
@@ -2647,7 +2647,7 @@
             let userLevel = 0;
             
             list.innerHTML = items.map(item => {
-                const isLocked = item.locked && userLevel < item.level - 1;
+                const isLocked = false; // Remove locking - all items are available
                 const rarityColors = {
                     1: 'rgba(148,163,184,0.3)', // gray
                     5: 'rgba(59,130,246,0.3)', // blue
