--- a/web_app.html
+++ b/web_app.html
@@ -2748,7 +2748,7 @@
                             <div style="background:rgba(16,185,129,0.2);padding:8px;border-radius:8px;margin-bottom:8px;">
                                 <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:4px;">
                                     <span style="color:#10b981;font-size:12px;font-weight:700;">⏱️ Длительность:</span>
-                                    <span style="color:#fff;font-size:12px;font-weight:800;">${Math.floor(item.duration / 60)} часов</span>
+                                    <span style="color:#fff;font-size:12px;font-weight:800;">${item.duration < 60 ? item.duration + ' минут' : Math.floor(item.duration / 60) + ' часов'}</span>
                                 </div>
                                 <div style="display:flex;justify-content:space-between;align-items:center;">
                                     <span style="color:#10b981;font-size:12px;font-weight:700;">⚡ Скорость:</span>
@@ -2757,7 +2757,10 @@
                             </div>
                         `}
                         <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : `buyShopItem('${category}', ${item.level}, ${item.price})`}" 
-                                style="width:100%;padding:11px;background:${isLocked ? 'rgba(239,68,68,0.6)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:#fff;border:none;border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:800;font-size:14px;transition:all 0.3s;">
+                                style="width:100%;padding:11px;background:${isLocked ? 'rgba(239,68,68,0.6)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:#fff;border:none;border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:800;font-size:14px;transition:all 0.3s;position:relative;overflow:hidden;"
+                                onmousedown="if(!${isLocked}){this.style.transform='scale(0.95)';this.style.boxShadow='0 2px 8px rgba(102,126,234,0.4)'}"
+                                onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='none'}"
+                                onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='none'}">
                             ${isLocked ? '🔒 Заблокировано' : `Купить ${item.price.toLocaleString()} 🪙`}
                         </button>
                     </div>
