--- a/web_app.html
+++ b/web_app.html
@@ -2612,14 +2612,12 @@
                         </div>
                         <!-- VIP Button Row -->
                         <div id="vipButtonRow" style="margin-bottom:15px;">
-                            <div style="padding:8px 12px;background:linear-gradient(135deg,rgba(255,215,0,0.2),rgba(255,237,78,0.2),rgba(255,215,0,0.2));border:3px solid rgba(255,215,0,0.7);border-radius:16px;position:relative;box-shadow:0 6px 25px rgba(255,215,0,0.3);overflow:hidden;">
-                                <!-- VIP Badge -->
-                                <div style="position:absolute;top:4px;right:4px;background:linear-gradient(135deg,#ffd700,#ffed4e,#ffd700);color:#000;padding:4px 8px;border-radius:8px;font-size:10px;font-weight:900;box-shadow:0 3px 10px rgba(255,215,0,0.5);text-shadow:0 1px 2px rgba(0,0,0,0.2);">⭐ VIP</div>
-                                
+                            <div style="padding:6px;background:linear-gradient(135deg,rgba(255,215,0,0.2),rgba(255,237,78,0.2),rgba(255,215,0,0.2));border:2px solid rgba(255,215,0,0.7);border-radius:12px;position:relative;box-shadow:0 4px 15px rgba(255,215,0,0.3);">
                                 <!-- Premium Button -->
-                                <button id="vipButton" onclick="openVIPModal('tap_boost')" style="width:100%;padding:12px 16px;background:linear-gradient(135deg,#ffd700,#ffed4e,#ffd700,#ffed4e);color:#000;border:3px solid #ffd700;border-radius:12px;cursor:pointer;font-weight:900;font-size:15px;transition:all 0.3s;box-shadow:0 4px 15px rgba(255,215,0,0.5);text-shadow:0 1px 2px rgba(0,0,0,0.2);position:relative;overflow:hidden;" onmousedown="this.style.transform='scale(0.97)';this.style.boxShadow='0 6px 20px rgba(255,215,0,0.7)'" onmouseup="this.style.transform='scale(1)';this.style.boxShadow='0 4px 15px rgba(255,215,0,0.5)'" onmouseleave="this.style.transform='scale(1)';this.style.boxShadow='0 4px 15px rgba(255,215,0,0.5)'">
-                                    <span style="font-size:18px;margin-right:8px;text-shadow:0 2px 4px rgba(0,0,0,0.3);">⭐</span>
-                                    <span style="background:linear-gradient(135deg,#000,#333);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;font-weight:900;">Купить VIP функции за Telegram Stars</span>
+                                <button id="vipButton" onclick="openVIPModal('tap_boost')" style="width:100%;padding:8px 12px;background:linear-gradient(135deg,#ffd700,#ffed4e,#ffd700);color:#000;border:2px solid #ffd700;border-radius:8px;cursor:pointer;font-weight:800;font-size:14px;transition:all 0.3s;box-shadow:0 3px 10px rgba(255,215,0,0.4);position:relative;display:flex;align-items:center;justify-content:center;" onmousedown="this.style.transform='scale(0.97)'" onmouseup="this.style.transform='scale(1)'" onmouseleave="this.style.transform='scale(1)'">
+                                    <span style="font-size:16px;margin-right:6px;">⭐</span>
+                                    <span style="flex:1;text-align:center;">Купить VIP функции за Telegram Stars</span>
+                                    <div style="background:linear-gradient(135deg,#000,#333);color:#fff;padding:2px 6px;border-radius:4px;font-size:10px;font-weight:900;margin-left:8px;">VIP</div>
                                 </button>
                             </div>
                         </div>
