--- a/web_app.html
+++ b/web_app.html
@@ -836,6 +836,56 @@
             transform: rotate(90deg);
         }
 
+        /* Специальный стиль для крестика в магазине */
+        .shop-close-btn {
+            background: linear-gradient(135deg, rgba(239,68,68,0.9), rgba(220,38,38,1));
+            border: 2px solid rgba(255,255,255,0.4);
+            border-radius: 50%;
+            width: 48px;
+            height: 48px;
+            cursor: pointer;
+            color: white;
+            font-size: 24px;
+            font-weight: 900;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 6px 20px rgba(239,68,68,0.4);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .shop-close-btn::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255,255,255,0.3);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            transition: all 0.3s ease;
+        }
+
+        .shop-close-btn:hover {
+            background: linear-gradient(135deg, rgba(239,68,68,1), rgba(220,38,38,1));
+            transform: rotate(90deg) scale(1.15);
+            box-shadow: 0 8px 30px rgba(239,68,68,0.6);
+            border-color: rgba(255,255,255,0.7);
+        }
+
+        .shop-close-btn:hover::before {
+            width: 100%;
+            height: 100%;
+        }
+
+        .shop-close-btn:active {
+            transform: rotate(90deg) scale(0.9);
+            box-shadow: 0 4px 15px rgba(239,68,68,0.5);
+        }
+
         .shop-category {
             margin-bottom: 20px;
         }
@@ -1347,7 +1397,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="modal-title">🛒 Магазин</div>
-                <button class="close-btn" onclick="closeModal('shopModal')">✕</button>
+                <button class="close-btn shop-close-btn" onclick="closeModal('shopModal')">✖</button>
             </div>
             <div class="shop-category">
                 <div class="category-title">⚡ Бусты</div>
