--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -829,19 +829,55 @@
             display: flex !important;
             align-items: center !important;
             justify-content: center !important;
-            transition: all 0.2s ease !important;
+            transition: background 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease !important;
             position: absolute !important;
             top: 10px !important;
             right: 10px !important;
             z-index: 10001 !important;
             box-shadow: 0 2px 6px rgba(0,0,0,0.4) !important;
+            transform: none !important;
         }
 
         .close-btn:hover {
             background: rgba(255,255,255,0.25) !important;
             border-color: rgba(255,255,255,0.5) !important;
-            transform: scale(1.1) !important;
+            transform: scale(1.05) !important;
             box-shadow: 0 4px 12px rgba(0,0,0,0.4) !important;
+        }
+
+        .close-btn:active {
+            transform: scale(0.95) !important;
+        }
+
+        /* Принудительный сброс для всех возможных конфликтов */
+        button.close-btn,
+        .modal button.close-btn,
+        .modal-content button.close-btn {
+            background: rgba(255,255,255,0.2) !important;
+            border: 2px solid rgba(255,255,255,0.4) !important;
+            border-radius: 50% !important;
+            width: 32px !important;
+            height: 32px !important;
+            cursor: pointer !important;
+            color: white !important;
+            font-size: 14px !important;
+            font-weight: bold !important;
+            display: flex !important;
+            align-items: center !important;
+            justify-content: center !important;
+            transition: background 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease !important;
+            position: absolute !important;
+            top: 10px !important;
+            right: 10px !important;
+            z-index: 10001 !important;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.4) !important;
+            transform: none !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            min-width: 32px !important;
+            min-height: 32px !important;
+            max-width: 32px !important;
+            max-height: 32px !important;
         }
 
         /* Стильная кнопка закрытия для категорий */
