NUCLEAR FIX: Add JavaScript force reset + CSS at end of file for close button

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -5160,6 +5160,61 @@
                 console.error('filterCategory error:', err);
             }
         }
+
+        // ПРИНУДИТЕЛЬНЫЙ СБРОС СТИЛЕЙ КРЕСТИКА
+        function forceResetCloseButtons() {
+            const closeButtons = document.querySelectorAll('button.close-btn, .modal button, .modal-content button');
+            closeButtons.forEach(btn => {
+                if (btn.textContent.includes('✕') || btn.onclick && btn.onclick.toString().includes('closeModal')) {
+                    btn.style.transform = 'none';
+                    btn.style.position = 'absolute';
+                    btn.style.top = '10px';
+                    btn.style.right = '10px';
+                    btn.style.zIndex = '99999';
+                }
+            });
+        }
+
+        // Сброс стилей при загрузке и каждые 100мс
+        document.addEventListener('DOMContentLoaded', forceResetCloseButtons);
+        setInterval(forceResetCloseButtons, 100);
     </script>
+
+    <style>
+        /* ФИНАЛЬНАЯ ЗАЩИТА ОТ ПОВОРОТА КРЕСТИКА - МАКСИМАЛЬНЫЙ ПРИОРИТЕТ */
+        button.close-btn,
+        .modal button.close-btn,
+        .modal-content button.close-btn,
+        [class*="close-btn"],
+        button[class*="close"],
+        button[onclick*="closeModal"],
+        button[onclick*="remove"] {
+            transform: none !important;
+            position: absolute !important;
+            top: 10px !important;
+            right: 10px !important;
+            z-index: 99999 !important;
+        }
+
+        button.close-btn:hover,
+        .modal button.close-btn:hover,
+        .modal-content button.close-btn:hover,
+        [class*="close-btn"]:hover,
+        button[class*="close"]:hover,
+        button[onclick*="closeModal"]:hover,
+        button[onclick*="remove"]:hover {
+            transform: scale(1.05) !important;
+        }
+
+        button.close-btn:active,
+        .modal button.close-btn:active,
+        .modal-content button.close-btn:active,
+        [class*="close-btn"]:active,
+        button[class*="close"]:active,
+        button[onclick*="closeModal"]:active,
+        button[onclick*="remove"]:active {
+            transform: scale(0.95) !important;
+        }
+    </style>
 </body>
 </html>
