Remove inline styles from close buttons that override CSS rules

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -2183,7 +2183,7 @@
                     <div style="background:linear-gradient(135deg,#ffd700,#ffed4e);padding:24px;border-radius:22px 22px 0 0;text-align:center;">
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
                             <h2 style="font-size: 26px; color: #000; margin: 0; font-weight: 900;">👑 VIP СТАТУСЫ</h2>
-                            <button class="close-btn" onclick="this.closest('.modal').remove()" style="background: rgba(0,0,0,0.2) !important; border: 2px solid #000 !important; color: #000 !important;">✕</button>
+                            <button class="close-btn" onclick="this.closest('.modal').remove()">✕</button>
                         </div>
                         <div style="font-size:14px;color:rgba(0,0,0,0.7);">Выберите VIP пакет</div>
                     </div>
@@ -2816,7 +2816,7 @@
                     <div style="background: linear-gradient(135deg, rgba(0,0,0,0.7), rgba(20,20,30,0.8)); padding: 24px 60px 24px 24px; border-radius: 22px 22px 0 0; text-align: center; position: relative; backdrop-filter: blur(5px);">
                         <h2 style="font-size: 22px; color: #ffd700; margin: 0; font-weight: 800; text-shadow: 0 2px 8px rgba(255,215,0,0.3);">${vipItems.name}</h2>
                         <div style="font-size: 13px; color: rgba(255,255,255,0.7); margin-top: 6px; font-weight: 500;">Эксклюзивные функции за Telegram Stars</div>
-                        <button class="close-btn" onclick="this.closest('.modal').remove()" style="background: rgba(255,215,0,0.15) !important; border: 1px solid rgba(255,215,0,0.4) !important; color: #ffd700 !important;">✕</button>
+                        <button class="close-btn" onclick="this.closest('.modal').remove()">✕</button>
                     </div>
                     
                     <div style="padding: 20px;">
