Add final CSS protection for close button in shop - no rotation

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -5116,5 +5116,24 @@
 
     </script>
 
+    <style>
+        /* ФИНАЛЬНАЯ ЗАЩИТА КРЕСТИКА В МАГАЗИНЕ */
+        .close-btn {
+            transform: none !important;
+            position: absolute !important;
+            top: 10px !important;
+            right: 10px !important;
+            z-index: 99999 !important;
+        }
+        
+        .close-btn:hover {
+            transform: scale(1.05) !important;
+        }
+        
+        .close-btn:active {
+            transform: scale(0.95) !important;
+        }
+    </style>
+
 </body>
 </html>
