Remove ALL animations from close button - no rotation, no scale

--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -844,12 +844,12 @@
         .close-btn:hover {
             background: rgba(255,255,255,0.25) !important;
             border-color: rgba(255,255,255,0.5) !important;
-            transform: scale(1.05) !important;
+            transform: none !important;
             box-shadow: 0 4px 12px rgba(0,0,0,0.4) !important;
         }
 
         .close-btn:active {
-            transform: scale(0.95) !important;
+            transform: none !important;
         }
 
         /* Стильная кнопка закрытия для категорий */
@@ -5127,11 +5127,11 @@
         }
         
         .close-btn:hover {
-            transform: scale(1.05) !important;
+            transform: none !important;
         }
         
         .close-btn:active {
-            transform: scale(0.95) !important;
+            transform: none !important;
         }
     </style>
 
