--- a/Desktop/qwantum 2.0/web_app.html
+++ b/Desktop/qwantum 2.0/web_app.html
@@ -816,40 +816,32 @@
             background-clip: text;
         }
 
-        /* ЕДИНСТВЕННОЕ ПРАВИЛО ДЛЯ КРЕСТИКА - БЕЗ ПОВОРОТА */
+        /* ПРОСТОЙ КРЕСТИК БЕЗ АНИМАЦИЙ */
         .close-btn {
-            background: rgba(255,255,255,0.2) !important;
-            border: 2px solid rgba(255,255,255,0.4) !important;
-            border-radius: 50% !important;
-            width: 32px !important;
-            height: 32px !important;
-            cursor: pointer !important;
-            color: white !important;
-            font-size: 14px !important;
-            font-weight: bold !important;
-            display: flex !important;
-            align-items: center !important;
-            justify-content: center !important;
-            transition: background 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease !important;
-            position: absolute !important;
-            top: 10px !important;
-            right: 10px !important;
-            z-index: 10001 !important;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.4) !important;
-            transform: none !important;
-            margin: 0 !important;
-            padding: 0 !important;
+            background: rgba(255,255,255,0.2);
+            border: 2px solid rgba(255,255,255,0.4);
+            border-radius: 50%;
+            width: 32px;
+            height: 32px;
+            cursor: pointer;
+            color: white;
+            font-size: 14px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 10001;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+            margin: 0;
+            padding: 0;
         }
 
         .close-btn:hover {
-            background: rgba(255,255,255,0.25) !important;
-            border-color: rgba(255,255,255,0.5) !important;
-            transform: none !important;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.4) !important;
-        }
-
-        .close-btn:active {
-            transform: none !important;
+            background: rgba(255,255,255,0.25);
+            border-color: rgba(255,255,255,0.5);
         }
 
         /* Стильная кнопка закрытия для категорий */
@@ -5116,24 +5108,6 @@
 
     </script>
 
-    <style>
-        /* ФИНАЛЬНАЯ ЗАЩИТА КРЕСТИКА В МАГАЗИНЕ */
-        .close-btn {
-            transform: none !important;
-            position: absolute !important;
-            top: 10px !important;
-            right: 10px !important;
-            z-index: 99999 !important;
-        }
-        
-        .close-btn:hover {
-            transform: none !important;
-        }
-        
-        .close-btn:active {
-            transform: none !important;
-        }
-    </style>
 
 </body>
 </html>
