--- a/web_app.html
+++ b/web_app.html
@@ -817,27 +817,36 @@
         }
 
         .close-btn {
-            background: rgba(255,255,255,0.1) !important;
-            border: none !important;
+            background: linear-gradient(135deg, #ff4757, #ff3742) !important;
+            border: 2px solid #ff6b7a !important;
             border-radius: 50% !important;
-            width: 40px !important;
-            height: 40px !important;
+            width: 42px !important;
+            height: 42px !important;
             cursor: pointer !important;
             color: white !important;
-            font-size: 20px !important;
+            font-size: 18px !important;
+            font-weight: bold !important;
             display: flex !important;
             align-items: center !important;
             justify-content: center !important;
             transition: all 0.3s ease !important;
             position: absolute !important;
-            top: 15px !important;
-            right: 15px !important;
+            top: 12px !important;
+            right: 12px !important;
             z-index: 1000 !important;
+            box-shadow: 0 4px 15px rgba(255, 71, 87, 0.4) !important;
+            text-shadow: 0 1px 3px rgba(0,0,0,0.3) !important;
         }
 
         .close-btn:hover {
-            background: rgba(255,255,255,0.2);
-            transform: none !important;
+            background: linear-gradient(135deg, #ff3742, #ff2f3a) !important;
+            border-color: #ff8a95 !important;
+            transform: scale(1.1) !important;
+            box-shadow: 0 6px 20px rgba(255, 71, 87, 0.6) !important;
+        }
+
+        .close-btn:active {
+            transform: scale(0.95) !important;
         }
 
 
