--- a/web_app.html
+++ b/web_app.html
@@ -853,22 +853,31 @@
         /* Стильная кнопка закрытия для категорий */
         .category-close-btn {
             width: 100%;
-            padding: 12px 20px;
+            padding: 16px 24px;
             background: linear-gradient(135deg, #667eea, #764ba2);
             color: #fff;
-            border: none;
-            border-radius: 12px;
+            border: 2px solid rgba(255,255,255,0.2);
+            border-radius: 16px;
             cursor: pointer;
-            font-weight: 700;
-            font-size: 14px;
-            margin-top: 15px;
-            transition: all 0.3s;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+            font-weight: 800;
+            font-size: 16px;
+            margin-top: 20px;
+            transition: all 0.3s ease;
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+            text-shadow: 0 1px 3px rgba(0,0,0,0.3);
+            position: relative;
+            overflow: hidden;
         }
 
         .category-close-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.6);
+            background: linear-gradient(135deg, #5a67d8, #6b46c1);
+            border-color: rgba(255,255,255,0.3);
+        }
+
+        .category-close-btn:active {
+            transform: translateY(-1px);
         }
 
         /* VIP стильная кнопка закрытия */
