--- a/web_app.html
+++ b/web_app.html
@@ -2849,9 +2849,9 @@
                                             <div style="font-weight: 800; font-size: 14px; color: #fff; text-shadow: 0 1px 3px rgba(0,0,0,0.3);">${item.name.split(' ').slice(1).join(' ')}</div>
                                             <div style="font-size: 11px; color: rgba(255,255,255,0.8); margin-top: 2px;">${item.desc}</div>
                                         </div>
-                                        <div style="background: linear-gradient(135deg, #ffd700, #ffed4e, #ffd700); color: #000; padding: 6px 12px; border-radius: 10px; font-size: 13px; font-weight: 900; text-shadow: 0 2px 4px rgba(0,0,0,0.3); border: 2px solid #ffd700; box-shadow: 0 4px 12px rgba(255,215,0,0.4); position: relative; overflow: hidden;">
+                                        <div style="background: linear-gradient(135deg, #ffd700, #ffed4e, #ffd700); color: #000; padding: 4px 8px; border-radius: 8px; font-size: 11px; font-weight: 900; text-shadow: 0 1px 3px rgba(0,0,0,0.3); border: 1px solid #ffd700; box-shadow: 0 3px 8px rgba(255,215,0,0.4); position: relative; overflow: hidden;">
                                             <div style="position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background: linear-gradient(90deg, transparent, rgba(255,255,255,0.4), transparent); animation: shimmer 2s infinite;"></div>
-                                            <span style="font-size: 16px; margin-right: 4px; filter: drop-shadow(0 0 3px rgba(255,215,0,0.8));">⭐</span>${item.price}
+                                            <span style="font-size: 12px; font-weight: 900; text-shadow: 0 1px 2px rgba(0,0,0,0.4);">VIP</span>
                                         </div>
                                     </div>
                                     
@@ -2867,11 +2867,13 @@
                                     ` : ''}
                                     
                                     <button onclick="buyWithStars('${category}', ${item.level}, ${item.price})" 
-                                            style="width: 100%; padding: 14px; background: linear-gradient(135deg, #ffd700, #ffed4e, #ffd700); color: #000; border: 2px solid #ffd700; border-radius: 14px; cursor: pointer; font-weight: 800; font-size: 15px; transition: all 0.3s; position: relative; overflow: hidden; box-shadow: 0 6px 20px rgba(255,215,0,0.4); text-shadow: 0 2px 4px rgba(0,0,0,0.3);"
-                                            onmousedown="this.style.transform='scale(0.98)'; this.style.boxShadow='0 8px 25px rgba(255,215,0,0.5)'"
-                                            onmouseup="this.style.transform='scale(1)'; this.style.boxShadow='0 6px 20px rgba(255,215,0,0.4)'"
-                                            onmouseleave="this.style.transform='scale(1)'; this.style.boxShadow='0 6px 20px rgba(255,215,0,0.4)'">
-                                        <span style="font-size: 20px; margin-right: 8px; filter: drop-shadow(0 0 4px rgba(255,215,0,0.8)); text-shadow: 0 2px 4px rgba(0,0,0,0.3);">⭐</span>Купить за ${item.price} Telegram Stars
+                                            style="width: 100%; padding: 10px 12px; background: linear-gradient(135deg, #ffd700, #ffed4e, #ffd700); color: #000; border: 1px solid #ffd700; border-radius: 10px; cursor: pointer; font-weight: 800; font-size: 13px; transition: all 0.3s; position: relative; overflow: hidden; box-shadow: 0 4px 12px rgba(255,215,0,0.3); text-shadow: 0 1px 2px rgba(0,0,0,0.2); display: flex; align-items: center; justify-content: center; gap: 6px;"
+                                            onmousedown="this.style.transform='scale(0.98)'; this.style.boxShadow='0 6px 16px rgba(255,215,0,0.4)'"
+                                            onmouseup="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(255,215,0,0.3)'"
+                                            onmouseleave="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(255,215,0,0.3)'">
+                                        <span>Купить за ${item.price}</span>
+                                        <span style="font-size: 16px; filter: drop-shadow(0 0 3px rgba(255,215,0,0.8)); text-shadow: 0 1px 2px rgba(0,0,0,0.3);">⭐</span>
+                                        <span>Telegram Stars</span>
                                     </button>
                                 </div>
                             `).join('')}
