--- a/web_app.html
+++ b/web_app.html
@@ -3053,19 +3053,19 @@
                         `}
                         ${category === 'autobot' ? `
                             <button id="autobot-btn-${item.level}" onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${item.level}, ${item.price})` : `buyShopItem('${category}', ${item.level}, ${item.price})`}" 
-                                    style="width:100%;padding:11px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '2px solid #ffd700' : 'none'};border-radius:12px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:800;font-size:14px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.4)' : 'none'};"
-                                    onmousedown="if(!${isLocked}){this.style.transform='scale(0.95)';this.style.boxShadow='${item.currency === 'stars' ? '0 6px 20px rgba(255,215,0,0.6)' : '0 2px 8px rgba(102,126,234,0.4)'}'}"
-                                    onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.4)' : 'none'}'}"
-                                    onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.4)' : 'none'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `Купить за ${item.price} ⭐ Telegram Stars` : `Купить за ${stats.price.toLocaleString()} 🪙`}
+                                    style="width:100%;padding:8px 12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:700;font-size:12px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'};display:flex;align-items:center;justify-content:center;gap:4px;"
+                                    onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
+                                    onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
+                                    onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${stats.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
                             </button>
                         ` : `
                             <button onclick="${isLocked ? 'tg.showAlert(\'🔒 Сначала купите предыдущий уровень\')' : item.currency === 'stars' ? `buyWithStars('${category}', ${item.level}, ${item.price})` : `buyShopItem('${category}', ${item.level}, ${item.price})`}" 
-                                    style="width:100%;padding:11px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '2px solid #ffd700' : 'none'};border-radius:12px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:800;font-size:14px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.4)' : 'none'};"
-                                    onmousedown="if(!${isLocked}){this.style.transform='scale(0.95)';this.style.boxShadow='${item.currency === 'stars' ? '0 6px 20px rgba(255,215,0,0.6)' : '0 2px 8px rgba(102,126,234,0.4)'}'}"
-                                    onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.4)' : 'none'}'}"
-                                    onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 15px rgba(255,215,0,0.4)' : 'none'}'}">
-                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `Купить за ${item.price} ⭐ Telegram Stars` : `Купить за ${stats.price.toLocaleString()} 🪙`}
+                                    style="width:100%;padding:8px 12px;background:${isLocked ? 'rgba(239,68,68,0.6)' : item.currency === 'stars' ? 'linear-gradient(135deg,#ffd700,#ffed4e,#ffd700)' : 'linear-gradient(135deg,#667eea,#764ba2)'};color:${item.currency === 'stars' ? '#000' : '#fff'};border:${item.currency === 'stars' ? '1px solid #ffd700' : 'none'};border-radius:10px;cursor:${isLocked ? 'not-allowed' : 'pointer'};font-weight:700;font-size:12px;transition:all 0.3s;position:relative;overflow:hidden;box-shadow:${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'};display:flex;align-items:center;justify-content:center;gap:4px;"
+                                    onmousedown="if(!${isLocked}){this.style.transform='scale(0.98)';this.style.boxShadow='${item.currency === 'stars' ? '0 4px 12px rgba(255,215,0,0.4)' : '0 3px 8px rgba(102,126,234,0.4)'}'}"
+                                    onmouseup="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}"
+                                    onmouseleave="if(!${isLocked}){this.style.transform='scale(1)';this.style.boxShadow='${item.currency === 'stars' ? '0 3px 10px rgba(255,215,0,0.3)' : '0 2px 6px rgba(102,126,234,0.3)'}'}">
+                                ${isLocked ? '🔒 Заблокировано' : item.currency === 'stars' ? `<span>Купить за ${item.price}</span><span style="font-size:14px;">⭐</span><span>Stars</span>` : `<span>Купить за ${stats.price.toLocaleString()}</span><span style="font-size:14px;">🪙</span>`}
                             </button>
                         `}
                     </div>
@@ -3113,12 +3113,12 @@
             .then(res => res.json())
             .then(data => {
                 if(data.success) {
-                    // Beautiful single success notification
+                    // Compact success notification for Telegram
                     const anim = document.createElement('div');
-                    anim.style.cssText='position:fixed;top:20%;left:50%;transform:translate(-50%,-50%);z-index:10000;pointer-events:none;';
-                    anim.innerHTML='<div style="background:linear-gradient(135deg,rgba(34,197,94,0.95),rgba(16,185,129,0.95));padding:12px 20px;border-radius:12px;font-size:16px;box-shadow:0 6px 20px rgba(16,185,129,0.6);color:#fff;font-weight:700;display:flex;align-items:center;gap:8px;"><span style="font-size:20px;">✨</span> Покупка успешна!</div>';
+                    anim.style.cssText='position:fixed;top:15%;left:50%;transform:translate(-50%,-50%);z-index:10000;pointer-events:none;';
+                    anim.innerHTML='<div style="background:linear-gradient(135deg,rgba(34,197,94,0.95),rgba(16,185,129,0.95));padding:8px 16px;border-radius:20px;font-size:14px;box-shadow:0 4px 15px rgba(16,185,129,0.5);color:#fff;font-weight:700;display:flex;align-items:center;gap:6px;border:1px solid rgba(255,255,255,0.2);"><span style="font-size:16px;">✨</span> Куплено!</div>';
                     document.body.appendChild(anim);
-                    setTimeout(()=>{anim.style.opacity='0';anim.style.transform='translate(-50%,-70%)';setTimeout(()=>{anim.remove();},300);},1000);
+                    setTimeout(()=>{anim.style.opacity='0';anim.style.transform='translate(-50%,-60%)';setTimeout(()=>{anim.remove();},300);},800);
                     
                     loadData();
                     
@@ -3174,11 +3174,13 @@
                     // Update passive income immediately
                     updatePassiveIncome();
                 } else {
+                    // Compact error notification for Telegram
                     const error = document.createElement('div');
-                    error.style.cssText='position:fixed;top:20%;left:50%;transform:translate(-50%,-50%);z-index:10000;pointer-events:none;';
-                    error.innerHTML='<div style="background:rgba(239,68,68,0.95);padding:20px 40px;border-radius:20px;font-size:24px;color:#fff;font-weight:700;">❌ ' + data.error + '</div>';
+                    error.style.cssText='position:fixed;top:15%;left:50%;transform:translate(-50%,-50%);z-index:10000;pointer-events:none;';
+                    const errorText = data.error.includes('Недостаточно') ? 'Недостаточно коинов' : data.error;
+                    error.innerHTML='<div style="background:linear-gradient(135deg,rgba(239,68,68,0.95),rgba(220,38,38,0.95));padding:8px 16px;border-radius:20px;font-size:14px;box-shadow:0 4px 15px rgba(239,68,68,0.5);color:#fff;font-weight:700;display:flex;align-items:center;gap:6px;border:1px solid rgba(255,255,255,0.2);"><span style="font-size:16px;">💰</span> ' + errorText + '</div>';
                     document.body.appendChild(error);
-                    setTimeout(()=>{error.remove();},2000);
+                    setTimeout(()=>{error.style.opacity='0';error.style.transform='translate(-50%,-60%)';setTimeout(()=>{error.remove();},300);},1500);
                 }
             });
         }
